@@ -1,22 +1,60 @@
 dependencies {
     // To let a user choose between thrift and thrift0.9.
-    compileOnly project(':thrift0.16')
+    if (project.ext.targetJavaVersion >= 11) {
+        compileOnly project(':thrift0.18')
+    } else {
+        compileOnly project(':thrift0.17')
+    }
     implementation project(':logback')
 
     // TODO(anuraaga): Consider removing these since this module does not have related functionality.
-    optionalApi 'io.micrometer:micrometer-registry-prometheus'
-    optionalApi 'io.dropwizard.metrics:metrics-json'
+    optionalApi libs.micrometer.prometheus
+    optionalApi libs.dropwizard.metrics.json
 
-    api 'javax.inject:javax.inject'
-    api 'org.springframework.boot:spring-boot-autoconfigure'
-    compileOnly 'javax.validation:validation-api'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    api libs.javax.inject
+    api libs.spring.boot2.autoconfigure
+    compileOnly libs.javax.validation
+    annotationProcessor libs.spring.boot2.configuration.processor
 
     testImplementation project(':grpc')
-    testImplementation project(':thrift0.16')
-    testImplementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-actuator'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    if (project.ext.targetJavaVersion >= 11) {
+        testImplementation project(':thrift0.18')
+    } else {
+        testImplementation project(':thrift0.17')
+    }
+    testImplementation libs.spring.boot2.starter
+    testImplementation libs.spring.boot2.starter.actuator
+    testImplementation libs.spring.boot2.starter.test
     // Enables cglib for testing
-    testImplementation 'org.hibernate.validator:hibernate-validator'
+    testImplementation libs.hibernate.validator6
+}
+
+def boot3Autoconfigure = "boot3-autoconfigure"
+def boot3AutoconfigureProjectDir = "${rootProject.projectDir}/spring/$boot3Autoconfigure"
+
+// Use the sources from ':spring:boot3-autoconfigure'.
+tasks.compileJava.dependsOn(project(":spring:$boot3Autoconfigure").tasks.compileJava)
+tasks.compileTestJava.dependsOn(project(":spring:$boot3Autoconfigure").tasks.compileTestJava)
+
+tasks.compileJava.source "${boot3AutoconfigureProjectDir}/src/main/java"
+tasks.compileTestJava.source "${projectDir}/src/test/java",
+        "${boot3AutoconfigureProjectDir}/src/test/java",
+        "${boot3AutoconfigureProjectDir}/gen-src/test/grpc",
+        "${boot3AutoconfigureProjectDir}/gen-src/test/java"
+tasks.processTestResources.from "${boot3AutoconfigureProjectDir}/src/test/resources"
+tasks.sourcesJar.from "${boot3AutoconfigureProjectDir}/src/main/java"
+tasks.sourcesJar.from "${boot3AutoconfigureProjectDir}/src/main/resources"
+tasks.javadoc.source "${boot3AutoconfigureProjectDir}/src/main/java"
+
+// Disable checkstyle because it's checked by ':spring:boot3-autoconfigure'.
+tasks.withType(Checkstyle) {
+    onlyIf { false }
+}
+
+// allows illegal access by cglib
+if (project.ext.testJavaVersion >= 16) {
+    tasks.withType(Test) {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    }
 }
